# cmaketutorial

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  cmaketutorial_config.h.in  config.sh  configure.sh  install.sh  main.cpp  readme.md  run.sh  run_test.sh
Adder/: CMakeLists.txt
Example/: CMakeLists.txt
test/: CMakeLists.txt  ExampleTests.cpp
